some html tags added for trining on Emmet

--- a/emmet.html
+++ b/emmet.html
@@ -8,13 +8,22 @@
 <body>
 
 <!-- p{Here is one example of many possibilities using Emmet} -->
+<!-- a{go to Gooogle} -->
 <p>Here is one example of many possibilities using Emmet</p>
+
 <!-- h${heading $$$}*6 -->
+
+
 <div>
     <img src="AndreaMazzanti.jpg" alt="An image of Andrea Mazzanti">
-    <a href="http://www.google.com">Google</a>
+    <a href="http://www.google.com" target="_blank">Google</a>
 </div>
 
+<!-- p.happiness{HAPPY!} -->
+<p class="happiness">HAPPY!</p>
+
+<img src="img/AM.jpg" alt="">
+<img src="/AndreaMazzanti.jpg" alt="">
 
 </body>
 </html>
