border and border-radius example

--- a/emmet.html
+++ b/emmet.html
@@ -23,7 +23,8 @@
 <p class="happiness">HAPPY!</p>
 
 <img src="img/AM.jpg" alt="">
-<img src="/AndreaMazzanti.jpg" alt="">
+<img src="/AndreaMazzanti.jpg" alt="An image of Andrea Mazzanti">
+
 
 </body>
 </html>
